// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="file-title"
>
  abc.svg*
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="file-title"
>
  Untitled
</div>
`;

exports[`should render correctly 3`] = `""`;
